--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit>=1.37.0
-pandas>=2.0.0
-numpy>=1.24.0
-
+streamlit>=1.30
+pandas>=2.0
+numpy
+altair
+plotly
+pycountry   # optional for country mapping
+python-dotenv  # optional for secrets
